name:                trec-car-graph-expansion
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable graph-retrieval
  main-is:             GraphRetrieval.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       DenseMapping
                       PageRank
                       Graph
                       AttriRank
                       ZScore
                       WriteRanking
                       GraphExpansionExperiments
                       EdgeDocCorpus
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base >=4.9 && <4.11,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010
  
executable trec-car-graph-expansion
  main-is:             GraphExpansionMain.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       DenseMapping
                       PageRank
                       Graph
                       AttriRank
                       ZScore
                       WriteRanking
                       GraphExpansionExperiments
                       EdgeDocCorpus
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base >=4.9 && <4.11,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-paragraph-retrieval
  main-is:             ParagraphRetrieval.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       DenseMapping
                       PageRank
                       Graph
                       AttriRank
                       ZScore
                       WriteRanking
                       GraphExpansionExperiments
                       EdgeDocCorpus
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base >=4.9 && <4.11,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-edgedoc-retrieval
  main-is:             EdgeDocRetrieval.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       DenseMapping
                       PageRank
                       Graph
                       AttriRank
                       ZScore
                       WriteRanking
                       GraphExpansionExperiments
                       EdgeDocCorpus
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base >=4.9 && <4.11,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010


executable trec-car-seeds
  main-is:             SeedEntities.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       DenseMapping
                       PageRank
                       Graph
                       AttriRank
                       ZScore
                       WriteRanking
                       GraphExpansionExperiments
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       simplir-word-embedding,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       aeson,
                       transformers,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       foldl,
                       log-domain,
                       time,
                       trec-car-tools
  default-language:    Haskell2010
  
executable trec-car-remove-seeds-from-qrels
  main-is:             RemoveSeedsFromQrels.hs
  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       simplir-word-embedding,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       aeson,
                       transformers,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       binary,
                       foldl,
                       log-domain,
                       time,
                       trec-car-tools
  default-language:    Haskell2010

executable graph-expansion-build-kb-index
  main-is:             BuildKbIndex.hs
  ghc-options:         -Wall -threaded -rtsopts
  other-modules:       EdgeDocCorpus
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       binary,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       trec-car-tools,
                       simplir,
                       warc,
                       filepath,
                       containers >=0.5 && <0.6,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       simplir-disk-index,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.4,
                       pipes,
                       pipes-safe,
                       text,
                       binary,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       ansi-wl-pprint,
                       hashable
  default-language:    Haskell2010
