name:                trec-car-graph-expansion
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10



library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     EdgeDocCorpus,
                       GraphExpansion,
                       MultiTrecRunFile,
                       GraphExpansionExperiments,
                       GridFeatures,
                       WriteRanking,
                       TrainAndStore,
                       AspectUtils
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       parallel,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       dlist,
                       random,
                       split,
                       graph-algorithms,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010

executable graph-retrieval
  main-is:             GraphRetrieval.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       graph-algorithms,
                       trec-car-tools
  default-language:    Haskell2010
  
executable trec-car-graph-expansion
  main-is:             GraphExpansionMain.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       graph-algorithms,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-paragraph-retrieval
  main-is:             ParagraphRetrieval.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-edgedoc-retrieval
  main-is:             EdgeDocRetrieval.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010


executable trec-car-seeds
  main-is:             SeedEntities.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       simplir-word-embedding,
                       optparse-applicative >= 0.12,
                       hashable,
                       aeson,
                       transformers,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       foldl,
                       log-domain,
                       time,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       trec-car-tools
  default-language:    Haskell2010
  
executable trec-car-remove-seeds-from-qrels
  main-is:             RemoveSeedsFromQrels.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       simplir-word-embedding,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       aeson,
                       transformers,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       foldl,
                       log-domain,
                       time,
                       trec-car-graph-expansion,
                       trec-car-tools
  default-language:    Haskell2010

executable graph-expansion-build-kb-index
  main-is:             BuildKbIndex.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       trec-car-tools,
                       simplir,
                       warc,
                       filepath,
                       containers,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       simplir-disk-index,
                       trec-car-tools,
                       profunctors,
                       foldl,
                       pipes,
                       pipes-safe,
                       text,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       trec-car-graph-expansion,
                       ansi-wl-pprint,
                       hashable
  default-language:    Haskell2010


executable graph-expansion-edge-doc
  main-is:             EdgeDocCorpusMain.hs
  ghc-options:         -Wall -rtsopts
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       trec-car-tools,
                       simplir,
                       warc,
                       filepath,
                       containers,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       simplir-disk-index,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.5,
                       pipes,
                       pipes-safe,
                       text,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       trec-car-graph-expansion,
                       ansi-wl-pprint,
                       hashable
  default-language:    Haskell2010




executable graph-expansion-supervised-grid-run
  main-is:             SupervisedGridRun.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       wl-pprint-text,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       parallel,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       split,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010

executable graph-expansion-pagerank-on-all
  main-is:             PageRankOnAll.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       vector-th-unbox,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       parallel,
                       snowball,
                       time,
                       split,
                       trec-car-graph-expansion,
                       graph-algorithms,
                       simplir-word-embedding,
                       trec-car-tools
  default-language:    Haskell2010
