name:                trec-car-graph-expansion
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10



library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     GraphExpansion,
                       GraphExpansionExperiments,
                       WriteRanking
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       random,
                       split,
                       graph-algorithms,
                       simplir-word-embedding,
                       simplir-learning-to-rank,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools,
                       mediawiki-convert
  default-language:    Haskell2010

executable graph-retrieval
  main-is:             GraphRetrieval.hs
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       graph-algorithms,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010
  
executable trec-car-graph-expansion
  main-is:             GraphExpansionMain.hs
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-io,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       graph-algorithms,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-paragraph-retrieval
  main-is:             ParagraphRetrieval.hs
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-edgedoc-retrieval
  main-is:             EdgeDocRetrieval.hs
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       simplir-word-embedding,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010



executable graph-expansion-build-kb-index
  main-is:             BuildKbIndex.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       text-short,
                       warc,
                       filepath,
                       containers,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       simplir-io,
                       simplir-disk-index,
                       simplir-pipes-utils,
                       profunctors,
                       foldl,
                       pipes,
                       pipes-safe,
                       text,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       trec-car-types,
                       mediawiki-convert,
                       trec-car-graph-expansion,
                       ansi-wl-pprint,
                       ent-rank-tools,
                       hashable
  default-language:    Haskell2010


executable graph-expansion-edge-doc
  main-is:             EdgeDocCorpusMain.hs
  ghc-options:         -Wall -rtsopts
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       simplir,
                       warc,
                       filepath,
                       containers,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       simplir-disk-index,
                       profunctors,
                       foldl >=1.2 && <1.5,
                       pipes,
                       pipes-safe,
                       text,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       trec-car-types,
                       trec-car-graph-expansion,
                       ansi-wl-pprint,
                       ent-rank-tools,
                       hashable
  default-language:    Haskell2010




executable graph-expansion-supervised-grid-run
  main-is:             SupervisedGridRun.hs
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       deepseq,
                       optparse-applicative >= 0.12,
                       wl-pprint-text,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir-io,
                       simplir-disk-index,
                       pipes,
                       parallel,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       split,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       simplir-word-embedding,
                       simplir-learning-to-rank,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010

executable graph-expansion-pagerank-on-all
  main-is:             PageRankOnAll.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                        -- For Unbox Sum instance
                       vector >= 0.12.1.2,  
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       deepseq,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-pipes-utils,
                       simplir-disk-index,
                       vector-th-unbox,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       parallel,
                       snowball,
                       time,
                       split,
                       trec-car-graph-expansion,
                       graph-algorithms,
                       simplir-word-embedding,
                       ent-rank-tools,
                       trec-car-types,
                       trec-car-tools
  default-language:    Haskell2010
