name:                learning-to-walk
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable learn2walk-feature-generation
  main-is:             GraphExpansionFeatureGeneration.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       lens,
                       deepseq,
                       optparse-applicative >= 0.12,
                       wl-pprint-text,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       parallel,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       split,
                       graph-algorithms,
                       trec-car-graph-expansion,
                       simplir-word-embedding,
                       simplir-learning-to-rank,
                       trec-car-graph-expansion,
                       trec-car-tools,
                       ent-rank-tools,
                       ent-rank
  default-language:    Haskell2010


