name:                mediawiki-import
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
build-type:          Simple
cabal-version:       >=1.10

executable trec-car-import
  main-is:             Main.hs
  other-modules:       Import, Entities, Utils, Templates
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall -rtsopts -threaded
  build-depends:       base,
                       serialise,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.4 && <1.5,
                       attoparsec >=0.13 && <0.14,
                       exceptions >=0.8 && <0.9,
                       lens >=4.14 && <4.16,
                       pipes >=4.1 && <4.3,
                       pipes-bytestring >=2.1 && <2.2,
                       pipes-zlib >=0.4 && <0.5,
                       optparse-applicative >=0.12 && <0.15,
                       pipes-attoparsec >=0.5 && <0.6,
                       gitrev,
                       trifecta,
                       aeson,
                       optparse-applicative >= 0.13,
                       free >=4.12 && <4.13,
                       transformers >=0.5 && <0.6,
                       time >=1.6 && <1.7,
                       hexpat >=0.20 && <0.21,
                       deepseq >=1.4 && <1.5,
                       split >=0.2 && <0.3,
                       parallel >=3.2 && <3.3,
                       async >=2.1 && <2.2,
                       cborg,
                       binary,
                       fork-map,
                       stm,
                       unix >= 2.7,
                       postgresql-simple >=0.5 && <0.6,
                       unordered-containers >=0.2 && <0.3,
                       trec-car-tools,
                       mediawiki-parser
  default-language:    Haskell2010
